[tool.poetry]
name = "tweakcake"
version = "2.0.0"
description = "Application configuration engine"
license="Apache Software License"
authors = ["Andrey Kislyuk <kislyuk@gmail.com>", "Josh S <dev@joshms.net>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">3.8,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
